--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <h1 class="title">Lift Simulation</h1>
     <div id="simulation-container">
-      <form onsubmit="startSimulation()">
+      <form onsubmit="startSimulation(event)">
         <div>
           <h3>Total Floors</h3>
           <input type="number" id="floor-nums" min="2" class="simulate-inputs" required />
