js for compilation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </main>
 
-  <script type="module" src="/src/main.ts">
+  <script type="module" src="/src/main.js">
 
   </script>
 </body>
