add linear instead of ease-in-out

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             { transform: `translateY(${-(floor - 1) * (targetFloorEl.offsetHeight + 20)}px)` }
           ], {
             duration: travelTime,  // Total time based on number of floors
-            easing: 'ease-in-out',
+            easing: 'linear',
             fill: 'forwards'
           });
 
