--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      width: max-content;
     }
 
     .floor-container {
@@ -60,8 +61,6 @@
       align-items: center;
       justify-items: flex-start;
       gap: 20px;
-      min-width: 640px;
-      min-height: 130px;
       padding: 10px;
       border: 2px solid black;
     }
