--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <form onsubmit="startSimulation(event)">
         <div>
           <h3>Total Floors</h3>
-          <input type="number" id="floor-nums" min="2" class="simulate-inputs" required />
+          <input type="number" id="floor-nums" min="1" class="simulate-inputs" required />
         </div>
         <div>
           <h3>Total Lifts</h3>
@@ -61,6 +61,7 @@
       justify-items: flex-start;
       gap: 20px;
       padding: 10px;
+      min-height: 130px;
       border: 2px solid black;
     }
 
